# raspberry-pi-day-planner

./: .gitignore  .pre-commit-config.yaml  BONUS_FEATURES_SUMMARY.md  Dockerfile  ESC_KEY_FUNCTIONALITY_SUMMARY.md  Makefile  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_3_SUMMARY.md  PI_DEPLOYMENT_GUIDE.md  PI_DEPLOYMENT_READY.md  PI_INTEGRATION_SUMMARY.md  RASPBERRY_PI_SETUP_GUIDE.md  README.md  Raspberry Pi Day Planner.desktop  SETUP_GUIDE.md  SETUP_GUIDE_BEGINNER.md  SIMPLE_GUIDE.md  check_simulation_import.py  docker-compose.yml  elevenlabs_config.py  fix_elevenlabs.py  fix_elevenlabs_complete.py  fix_elevenlabs_final.py  fix_elevenlabs_generator.py  fix_remove_elevenlabs.py  fix_simulation_simple.py  fix_voice_fallback.py  install.sh  install_desktop_shortcut.sh  main.py  peptide_integration.py  pi_simulation.py  pi_startup.py  progress.db  progress_data.db  pyproject.toml  raspberry-pi-day-planner.service  requirements.txt  requirements_windows.txt  run_pi_simulation.bat  (+28 more)
config/: schedule.yaml
modules/: adaptive_time.py  analytics.py  audio.py  backlog_manager.py  config_watcher.py  display.py  loader.py  logger.py  monitor.py  peptide_scheduler.py  pi_detection.py  progress_db.py  scheduler.py  task_timer.py  utils.py  web_api.py
templates/: dashboard.html
tests/: test_config_parsing.py
